# qoder-agent-sdk-samples

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_sample.yml
.github/workflows/: ci.yml
python/: README.md  pyproject.toml
python/ask-user-question/: README.md  main.py
python/code-review/: README.md  main.py
python/custom-tools/: README.md  main.py
python/hooks/: README.md  main.py
python/model-selection/: README.md  main.py
python/multi-turn-conversation/: README.md  main.py
python/quickstart/: README.md  main.py
python/streaming-chat/: README.md  main.py  requirements.txt
python/subagents/: README.md  main.py
python/tool-permissions/: README.md  main.py
typescript/: README.md  package-lock.json  package.json
typescript/ask-user-question/: README.md  index.ts  package.json
typescript/code-review/: README.md  index.ts  package.json
typescript/custom-tools/: README.md  data.json  index.ts  package.json
typescript/hooks/: README.md  index.ts  package.json
typescript/model-selection/: README.md  index.ts  package.json
typescript/multi-turn-conversation/: README.md  index.ts  package.json
typescript/quickstart/: README.md  index.ts  package.json
typescript/streaming-chat/: README.md  index.ts  package.json
typescript/subagents/: README.md  index.ts  package.json
typescript/tool-permissions/: README.md  index.ts  package.json
