[project]
name = "qoder-agent-sdk-samples-python"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "qoder-agent-sdk>=1.0.9,<2",
]

[dependency-groups]
dev = [
    "mypy>=1.17,<2",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]

[tool.mypy]
python_version = "3.10"
strict = true
